--- a/lib/config/semantic_kitti_v2.yaml
+++ b/lib/config/semantic_kitti_v2.yaml
@@ -111,37 +111,37 @@ learning_map:
   0 : 0     # "unlabeled"
   1 : 0     # "outlier" mapped to "unlabeled" --------------------------mapped
   10: 1     # "car"
-  11: 1     # "bicycle"
-  13: 1     # "bus" mapped to "other-vehicle" --------------------------mapped
-  15: 1     # "motorcycle"
-  16: 1     # "on-rails" mapped to "other-vehicle" ---------------------mapped
-  18: 1     # "truck"
-  20: 1     # "other-vehicle"
-  30: 1     # "person"
-  31: 1     # "bicyclist"
-  32: 1     # "motorcyclist"
-  40: 0     # "road"
-  44: 0    # "parking"
-  48: 0    # "sidewalk"
-  49: 0    # "other-ground"
-  50: 0    # "building"
-  51: 0    # "fence"
+  11: 2     # "bicycle"
+  13: 5     # "bus" mapped to "other-vehicle" --------------------------mapped
+  15: 3     # "motorcycle"
+  16: 5     # "on-rails" mapped to "other-vehicle" ---------------------mapped
+  18: 4     # "truck"
+  20: 5     # "other-vehicle"
+  30: 6     # "person"
+  31: 7     # "bicyclist"
+  32: 8     # "motorcyclist"
+  40: 9     # "road"
+  44: 10    # "parking"
+  48: 11    # "sidewalk"
+  49: 12    # "other-ground"
+  50: 13    # "building"
+  51: 14    # "fence"
   52: 0     # "other-structure" mapped to "unlabeled" ------------------mapped
-  60: 0     # "lane-marking" to "road" ---------------------------------mapped
-  70: 0    # "vegetation"
-  71: 0    # "trunk"
-  72: 0    # "terrain"
-  80: 0    # "pole"
-  81: 0    # "traffic-sign"
+  60: 9     # "lane-marking" to "road" ---------------------------------mapped
+  70: 15    # "vegetation"
+  71: 16    # "trunk"
+  72: 17    # "terrain"
+  80: 18    # "pole"
+  81: 19    # "traffic-sign"
   99: 0     # "other-object" to "unlabeled" ----------------------------mapped
   252: 1    # "moving-car" to "car" ------------------------------------mapped
-  253: 1    # "moving-bicyclist" to "bicyclist" ------------------------mapped
-  254: 1    # "moving-person" to "person" ------------------------------mapped
-  255: 1    # "moving-motorcyclist" to "motorcyclist" ------------------mapped
-  256: 1    # "moving-on-rails" mapped to "other-vehicle" --------------mapped
-  257: 1    # "moving-bus" mapped to "other-vehicle" -------------------mapped
-  258: 1    # "moving-truck" to "truck" --------------------------------mapped
-  259: 1    # "moving-other"-vehicle to "other-vehicle" ----------------mapped
+  253: 7    # "moving-bicyclist" to "bicyclist" ------------------------mapped
+  254: 6    # "moving-person" to "person" ------------------------------mapped
+  255: 8    # "moving-motorcyclist" to "motorcyclist" ------------------mapped
+  256: 5    # "moving-on-rails" mapped to "other-vehicle" --------------mapped
+  257: 5    # "moving-bus" mapped to "other-vehicle" -------------------mapped
+  258: 4    # "moving-truck" to "truck" --------------------------------mapped
+  259: 5    # "moving-other"-vehicle to "other-vehicle" ----------------mapped
 learning_map_inv: # inverse of previous map
   0: 0      # "unlabeled", and others ignored
   1: 10     # "car"
@@ -186,7 +186,7 @@ learning_ignore: # Ignore classes
   19: False    # "traffic-sign"
 split: # sequence numbers
   train:
-    - 0
+    # - 0
     - 1
     - 2
     - 3
@@ -196,18 +196,19 @@ split: # sequence numbers
     - 7
     - 8
     - 9
+  valid:
     - 10
-    - 11
-    - 12
-    - 13
-    - 14
-    - 15
-    - 16
-    - 17
-    - 18
-    - 19
-    - 20
-    - 21
+    # - 11
+    # - 12
+    # - 13
+    # - 14
+    # - 15
+    # - 16
+    # - 17
+    # - 18
+    # - 19
+    # - 20
+    # - 21
 sensor:
     name: "HDL64"
     type: "spherical" # projective
